--- a/css/main.css
+++ b/css/main.css
@@ -5,13 +5,13 @@
 
 body {
   font-family: 'Noto Sans', sans-serif;
-  font-size: 18px;
+  font-size: 19px;
   color: #404040;
   position: relative;
   background: #FFF;
 }
 p {
-  /* line-height: 1.5;*/
+  line-height: 1.7;
   margin: 30px 0;
 }
 p a {
